refactor(service): migrate image service to Request/Response DTOs